// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node List should not print before resized 1`] = `
<div
  className="sc-bZQynM gAHUms"
>
  <header
    className="sc-EHOje eksHn"
    data-focused={false}
  >
    loc
  </header>
  <div
    className="sc-gzVnrw VQBHp"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;

exports[`Project Node List should select a node locating same the index of cursor when focused 1`] = `
<div
  className="sc-bZQynM gAHUms"
>
  <header
    className="sc-EHOje eksHn"
    data-focused={true}
  >
    loc
  </header>
  <div
    className="sc-gzVnrw VQBHp"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;

exports[`Project Node List should show dummy content when nodes is empty 1`] = `
<div
  className="sc-bZQynM gAHUms"
>
  <header
    className="sc-EHOje eksHn"
    data-focused={true}
  >
    loc
  </header>
  <div
    className="sc-gzVnrw VQBHp"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;
